feat: fabric.js init setup

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://pablopenna.github.io/poke-teamphoto",
   "dependencies": {
+    
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -12,6 +13,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "fabric": "^6.9.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
@@ -19,6 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "clean": "rm -rf ./node_modules",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/fabric": "^5.3.10",
     "gh-pages": "^6.3.0"
   }
 }
