--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "axios": "^1.13.2",
+    "axios-cache-interceptor": "^1.8.3",
     "fabric": "^6.9.0",
+    "pokenode-ts": "^1.20.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
